# SMuRF_MultiModal

./: AGENTS.md  README.md  main.py  pyproject.toml
docs/: @AGENTS.md  README.md  feature_extractor.md
scripts/: grad_cam_final_bolin.py
smurf/: __init__.py  datasets.py  feature_extractor.py  losses.py  models.py  parameters.py  preprocessing.py  swintransformer.py  utils.py
smurf/tests/: test_feature_extractor.py
