[project]
name = "smurf-multimodal"
version = "0.1.0"
description = "SMuRF: Swin Transformer-based MultiModal and Multi-Region Data Fusion Framework to Predict OPSCC Outcomes"
authors = [
    {name = "Project Authors", email = "example@example.com"},
]
dependencies = [
    "einops",
    "h5py",
    "numpy",
    "pandas",
    "matplotlib",
    "medpy",
    "opencv-python",
    "openslide-python",
    "Pillow",
    "scikit-learn",
    "scikit-image",
    "lifelines",
    "pynrrd",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "webdataset",
]
requires-python = ">=3.8"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
